# vimscull

./: .gitignore  AGENTS.md  DEV.md  ERGONOMICS.md  README.md  TEST-LIMITATION.md
demo/: BUILD.md  Makefile  annotation-tutorial.cast  demo_utils.py  example.py  example_flow.py  flow-tutorial.cast  init_demo.lua  init_flow_demo.lua  init_notes_demo.lua  init_realistic.lua  init_search_demo.lua  launch_flow_nvim.sh  launch_notes_nvim.sh  launch_nvim.sh  launch_search_nvim.sh  notes-tutorial.cast  pre_setup_plugins.py  record_flow_tutorial.py  record_notes_tutorial.py  record_search_tutorial.py  record_tutorial.py  record_unified_demo.py  search-tutorial.cast  setup_demo_server.py  test_demo_config.py  test_demo_recording.py  validators.py  vimscull-demo.cast
lua/: audit_notes.lua  flows.lua
lua/numscull/: client.lua  control.lua  crypto.lua  flow.lua  init.lua  notes.lua  telescope.lua  transport.lua
mockscull/: .gitignore  README.md  pyproject.toml
mockscull/examples/: demo.py
mockscull/sample-config/: server.json  server.keypair
mockscull/sample-config/identities/: python-client
mockscull/sample-config/users/: python-client.pub
mockscull/schema/: control.schema.json  flow.schema.json  notes.schema.json
mockscull/src/numscull/: __init__.py  client.py  crypto.py  transport.py
mockscull/tests/: __init__.py  conftest.py  helpers.py  test_control.py  test_flow.py  test_notes.py  test_schema.py
plugin/: audit_notes.lua  flows.lua  numscull.lua
tests/: mock_server.py  run_tests.lua  test_flows.lua  test_real_server.lua
